# data-structures

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cbuild  meson.build  test.c
include/: array_list.h  hashmap.h  hashset.h  linked_list.h  optional.h  shapes.h  slice.h  tilemap.h  unordered_list.h  util.h
src/: array_list.c  hashmap.c  hashmap.h  hashset.c  linked_list.c  optional.c  optional.h  shapes.c  slice.c  tilemap.c  unordered_list.c  util.c
